# entry/routes/api.php
@@ -3,9 +3,6 @@
 declare(strict_types=1);
 
 use Illuminate\Support\Facades\Route;
-use App\Http\Controllers\Auth\AuthController;
+use App\Http\Controllers\User\UserController;
 
-Route::post('/login', [AuthController::class, 'loginUser'])->name('auth.login');
-Route::post('/register', [AuthController::class, 'registerUser'])->name('auth.register');
-
-Route::get('/test', [AuthController::class, 'test']);
+Route::get('/user/me', [UserController::class, 'me'])->name('user.me')->middleware('auth:firebase');
